@@ -1,13 +1,15 @@
 package de.cubenation.bedrock.core.service.command;
 
 import de.cubenation.bedrock.core.FoundationPlugin;
-import de.cubenation.bedrock.core.command.AbstractCommand;
+import de.cubenation.bedrock.core.command.Command;
 import de.cubenation.bedrock.core.command.CommandManager;
 import de.cubenation.bedrock.core.translation.JsonMessage;
 import de.cubenation.bedrock.core.wrapper.BedrockChatSender;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 /**
  * @author Cube-Nation
@@ -15,11 +17,11 @@ import java.util.List;
  */
 public abstract class SimpleCommandManager implements CommandManager {
 
-    private FoundationPlugin plugin;
+    private final FoundationPlugin plugin;
 
-    private String label;
+    private final String label;
 
-    private AbstractCommand command;
+    private Command command;
 
     public SimpleCommandManager(FoundationPlugin plugin, String label) {
         this.plugin = plugin;
@@ -46,10 +48,26 @@ public abstract class SimpleCommandManager implements CommandManager {
 
     @Override
     public List<String> onAutoComplete(BedrockChatSender sender, String[] args) {
-        return null;
+        ArrayList<String> list = new ArrayList<>();
+        if (!this.command.hasPermission(sender)) {
+            return null;
+        }
+
+        List<String> autoCompletion = this.command.getAutoCompletion(args, sender);
+        if (autoCompletion != null) {
+            list.addAll(autoCompletion);
+        }
+
+        // Remove duplicates
+        Set<String> set = new HashSet<>(list);
+        if (set.isEmpty()) {
+            return null;
+        } else {
+            return new ArrayList<>(set);
+        }
     }
 
-    public void setCommand(AbstractCommand command) {
+    public void setCommand(Command command) {
         this.command = command;
     }
 
@@ -62,8 +80,8 @@ public abstract class SimpleCommandManager implements CommandManager {
         return label;
     }
 
-    public List<AbstractCommand> getCommands() {
-        return Arrays.asList(new AbstractCommand[]{command});
+    public List<Command> getCommands() {
+        return List.of(command);
     }
 
     //endregion
